WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
282727
updateAllowsBackingStoreDetaching has wrong coordinates when inside an animated transform
https://bugs.webkit.org/show_bug.cgi?id=282727
Summary
updateAllowsBackingStoreDetaching has wrong coordinates when inside an animat...
Matt Woodrow
Reported
2024-11-06 16:45:48 PST
When descending through a layer that has an animated transform, the layerExtent is computed using the post-transform animation extents and the transform itself isn't pushed onto the geometry map. That means for all descendants, overlap bounds are no longer 'absolute', since they aren't transformed. This generally works ok for overlap testing, since everything within the transform stacking context is in the same coordinate space. updateAllowsBackingStoreDetaching compares these untransformed coordinates against the layout viewport though, and this is invalid, leading to backing stores not being detached.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-11-06 16:45:59 PST
<
rdar://problem/139393911
>
Matt Woodrow
Comment 2
2024-11-06 17:02:39 PST
Pull request:
https://github.com/WebKit/WebKit/pull/36301
EWS
Comment 3
2024-11-12 20:27:55 PST
Committed
286517@main
(43d5c16a35e7): <
https://commits.webkit.org/286517@main
> Reviewed commits have been landed. Closing PR #36301 and removing active labels.
EWS
Comment 4
2024-12-03 07:01:38 PST
Committed
283286.548@safari-7620-branch
(84c1168aa3b8): <
https://commits.webkit.org/283286.548@safari-7620-branch
> Reviewed commits have been landed. Closing PR #2348 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug