updateAllowsBackingStoreDetaching has wrong coordinates when inside an animated transform. https://bugs.webkit.org/show_bug.cgi?id=282727 <rdar://139393911>

Reviewed by Simon Fraser.

When descending through a layer that has an animated transform, the layerExtent
is computed using the post-transform animation extents and the transform itself
isn't pushed onto the geometry map.

That means for all descendants, overlap bounds are no longer 'absolute', since
they aren't transformed.

This generally works ok for overlap testing, since everything within the
transform stacking context is in the same coordinate space.

updateAllowsBackingStoreDetaching compares these untransformed coordinates
against the layout viewport though, and this is invalid, leading to backing
stores not being detached.

Actually fixing the layerExtent coordinates to be transformed (with the
transform extents) is complicated unfortunately.

This fixes the symptom by propagating the 'allow backing store detaching'
computation down to descendant layers, if they are in the same containing block
chain (and thus are a subset of the extent computed already).

* LayoutTests/compositing/backing/backing-store-attachment-animated-transform-inside-fixed-expected.txt: Added.
* LayoutTests/compositing/backing/backing-store-attachment-animated-transform-inside-fixed.html: Added.
* Source/WebCore/platform/graphics/ca/GraphicsLayerCA.cpp:
(WebCore::GraphicsLayerCA::updateCoverage):
* Source/WebCore/rendering/RenderLayerBacking.cpp:
(WebCore::RenderLayerBacking::updateAllowsBackingStoreDetaching):
* Source/WebCore/rendering/RenderLayerBacking.h:
* Source/WebCore/rendering/RenderLayerCompositor.cpp:
(WebCore::RenderLayerCompositor::CompositingState::stateForPaintOrderChildren const):
(WebCore::RenderLayerCompositor::allowsFixedPositionBackingStoreDetaching):
(WebCore::RenderLayerCompositor::computeCompositingRequirements):
* Source/WebCore/rendering/RenderLayerCompositor.h:

Canonical link: https://commits.webkit.org/286517@main